Rewriting problem backend to properly handle reading and writing file data safely, removing global CHEESES array, replacing it with correct file reads as appropriate. Also updated to require FS promises instead of just FS.
